--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.8.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.11.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "validator": "^13.5.1"
   }
 }
